--- a/focus-tracker-ai/package.json
+++ b/focus-tracker-ai/package.json
@@ -17,10 +17,12 @@
     "@tensorflow/tfjs-backend-wasm": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "d3-delaunay": "^6.0.4",
+    "file-saver": "^2.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-webcam": "^7.2.0",
-    "three": "^0.181.1"
+    "three": "^0.181.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
