--- a/focus-tracker-ai/package.json
+++ b/focus-tracker-ai/package.json
@@ -18,10 +18,15 @@
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "d3-delaunay": "^6.0.4",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.26",
+    "lottie-react": "^2.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-tsparticles": "^2.12.2",
     "react-webcam": "^7.2.0",
     "three": "^0.181.1",
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
